# LM-Studio_Watch-Dog

./: .dockerignore  .gitignore  Dockerfile  LM-Studio-WatchDog.spec  README.md  build_exe.bat  build_exe.ps1  pyproject.toml  run-desktop.bat  run-desktop.ps1  run-web.bat  run-web.ps1  run.py  run_desktop.py
.github/workflows/: docker-publish.yml
docs/: PUBLISHING.md
lm_studio_watchdog/: __init__.py  cli.py  config.py  desktop.py  discovery.py  gitnexus_bridge.py  lmstudio.py  pipeline.py  presets.py  scanner.py  watcher.py  web.py  win_mica.py
lm_studio_watchdog/static/: app.js  index.html  styles.css
