[project]
name = "lm-studio-watchdog"
version = "1.0.10"
description = "Local web and portable desktop app that keeps LM Studio project context updated."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.7"]

[project.scripts]
lm-studio-watchdog = "lm_studio_watchdog.cli:main"
lm-studio-watchdog-desktop = "lm_studio_watchdog.desktop:main"

[tool.pyinstaller]
name = "LM-Studio-WatchDog"
